Animation capabilities extended

--- a/wwwroot/static/css/site.css
+++ b/wwwroot/static/css/site.css
@@ -1,11 +1,15 @@
 .visible {
     visibility: visible;
     opacity: 1;
-    transition: opacity 0.4s linear;
+    transition: opacity 0.2s linear;
   }
 
   .hidden {
     visibility: hidden;
     opacity: 0;
-    transition: visibility 0s 0.2s, opacity 0.2s linear;
+    transition: visibility 0s 0.1s, opacity 0.1s linear;
+  }
+
+  .test-transition{
+    transition: height 1s linear;
   }
